[package]
name = "systems-cloudflare-internship-assignment"
version = "0.1.0"
authors = ["Akshat Mahajan <akshatm.bkk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
url = "2.1.1"
regex = "1"
openssl = "0.10.30"